--- a/index.html
+++ b/index.html
@@ -12,23 +12,30 @@
 <link href="css/main.css" rel="stylesheet" />
 <body ng-app="myApp" class="background_img"> 
 
-<div class="main-menu-wrap">
-<div class="nav-div" class="container ">
-    <nav>
-	  <a class="nav-link" href="#/" class="">Home</a>
-	  <a class="nav-link" href="#/snake" class="">About Me</a>
-	 <a class="nav-link" href="#/portfolio" class="">Portfolio</a>
-	</nav>        
+
+<div class="nav-div">
+	  	<a class="nav-link" href="#/" class="">Home</a>
+	  	<a class="nav-link" href="#/aboutMe" class="">About Me</a>
+	  	<a class="nav-link" href="#/portfolio" class="">Portfolio</a>
+		<a class="nav-link" href="#/resume" class="">Resume</a>
+
 </div>
-</div>
+
 
 <div ng-view></div>
 
+<!-- Modules -->
 <script src = "js/app.js"></script>
+
+<!-- Controllers -->
 <script src="js/controllers/HomeController.js"></script>
 <script src="js/controllers/SnakeController.js"></script>
 <script src="js/controllers/PortfolioController.js"></script>
+<script src="js/controllers/AboutMeController.js"></script>
 <script src="js/controllers/Carousel.js"></script>
+
+<!-- Directives -->
+
 
 <!-- Testing scripts -->
 
