Added a directive to view information in the About Me, moved files into appropriate folders, deleted old files, and updated some css

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 	  	<a class="nav-link" href="#/aboutMe" class="">About Me</a>
 	  	<a class="nav-link" href="#/portfolio" class="">Portfolio</a>
 		<a class="nav-link" href="#/resume" class="">Resume</a>
-
 </div>
 
 
@@ -32,10 +31,11 @@
 <script src="js/controllers/SnakeController.js"></script>
 <script src="js/controllers/PortfolioController.js"></script>
 <script src="js/controllers/AboutMeController.js"></script>
-<script src="js/controllers/Carousel.js"></script>
+
 
 <!-- Directives -->
-
+<script src="js/directives/Carousel.js"></script>
+<script src="js/directives/aboutMeItems.js"></script>
 
 <!-- Testing scripts -->
 
