--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 <link href="css/main.css" rel="stylesheet" />
-<body ng-app="myApp" class="background_img"> 
+<body ng-app="myApp" > 
 
-
+<div class="main-header"></div>
 <div class="nav-div">
 	  	<a class="nav-link" href="#/" class="">Home</a>
 	  	<a class="nav-link" href="#/aboutMe" class="">About Me</a>
@@ -21,7 +21,10 @@
 </div>
 
 
-<div ng-view></div>
+<div ng-view class="views"></div>
+
+
+<div class="main-footer"></div>
 
 <!-- Modules -->
 <script src = "js/app.js"></script>
